# ulamgym-nano

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATA_CARD.md  DATA_LICENSE.md  Dockerfile  LICENSE  Makefile  PUBLIC_RELEASE_NOTES.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
data/sample_tasks/: README.md  public_prompts.jsonl
docs/: ADDING_TASKS.md  CHALLENGE_RULES_TEMPLATE.md  COMPETITION_MODE.md  GITHUB_INIT.md  HOSTED_VERIFIER.md  PUBLIC_RELEASE_CHECKLIST.md  RLVR_INTEGRATION.md  SCHEMA.md
examples/: evaluate_sample.py  random_agent.py  reward_fn.py
private/: README.md
scripts/: init_github.sh
src/ulamgym_nano/: __init__.py  cli.py  env.py  io.py  leaderboard.py  rlvr.py  schema.py  server.py  verifiers.py
taskpacks/nano-sample-v0.2/: LICENSE.md  README.md  TASK_CARD.md  submissions_bad.jsonl  submissions_good.jsonl  taskpack.json  verifier_manifest.jsonl
tests/: test_core.py
